{
  "version": 4,
  "terraform_version": "1.1.8",
  "serial": 17,
  "lineage": "c367d3ab-abab-661c-b928-7af1a573bac4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "TheDeploymentMachine",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cff7528ff583bf9a",
            "arn": "arn:aws:ec2:us-east-1:128364418855:instance/i-0f56d33b74338ba50",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f56d33b74338ba50",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "practico-networking",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0055bcb34d9b99c25",
            "private_dns": "ip-10-0-0-192.ec2.internal",
            "private_ip": "10.0.0.192",
            "public_ip": "54.85.104.77",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-044b28549dbc4eb42",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a9d63ca67a6b6d73",
            "tags": {
              "Name": "TheDeploymentMachine"
            },
            "tags_all": {
              "Name": "TheDeploymentMachine"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-062a61b519aa7c312"
            ]
          },
          "dependencies": [
            "aws_eks_cluster.cluster-eks",
            "aws_eks_node_group.worker-node-group",
            "aws_security_group.allow_ssh",
            "aws_subnet.public_subnetA",
            "aws_subnet.public_subnetB",
            "aws_vpc.new_vpc",
            "time_sleep.wait_30_seconds"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:128364418855:internet-gateway/igw-0a4a8ad1a54e63125",
            "id": "igw-0a4a8ad1a54e63125",
            "owner_id": "128364418855",
            "tags": {
              "Name": "igw-app"
            },
            "tags_all": {
              "Name": "igw-app"
            },
            "vpc_id": "vpc-05101c350f1a8ac93"
          },
          "dependencies": [
            "aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:128364418855:route-table/rtb-0efcb5fc471bfc3a4",
            "id": "rtb-0efcb5fc471bfc3a4",
            "owner_id": "128364418855",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a4a8ad1a54e63125",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "route_igw_app"
            },
            "tags_all": {
              "Name": "route_igw_app"
            },
            "timeouts": null,
            "vpc_id": "vpc-05101c350f1a8ac93"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_pub_subA",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-055a79a82beafcd66",
            "route_table_id": "rtb-0efcb5fc471bfc3a4",
            "subnet_id": "subnet-0a9d63ca67a6b6d73"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.route_igw",
            "aws_subnet.public_subnetA",
            "aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_pub_subB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e48f33f34ecd8852",
            "route_table_id": "rtb-0efcb5fc471bfc3a4",
            "subnet_id": "subnet-00e102772f8f18eeb"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.route_igw",
            "aws_subnet.public_subnetB",
            "aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:128364418855:security-group/sg-0b2b13449ba00c409",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b2b13449ba00c409",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "http from vpc",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "https from vpc",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "Allow http traffic",
            "name_prefix": "",
            "owner_id": "128364418855",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web traffic"
            },
            "tags_all": {
              "Name": "web traffic"
            },
            "timeouts": null,
            "vpc_id": "vpc-05101c350f1a8ac93"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:128364418855:security-group/sg-062a61b519aa7c312",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-062a61b519aa7c312",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh from vpc",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Allow ssh traffic",
            "name_prefix": "",
            "owner_id": "128364418855",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ssh traffic"
            },
            "tags_all": {
              "Name": "ssh traffic"
            },
            "timeouts": null,
            "vpc_id": "vpc-05101c350f1a8ac93"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnetA",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:128364418855:subnet/subnet-04e30a97560840623",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04e30a97560840623",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "128364418855",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet_A"
            },
            "tags_all": {
              "Name": "private_subnet_A"
            },
            "vpc_id": "vpc-05101c350f1a8ac93"
          },
          "dependencies": [
            "aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnetB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:128364418855:subnet/subnet-0c11e18cb08f3ae34",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c11e18cb08f3ae34",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "128364418855",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet_B"
            },
            "tags_all": {
              "Name": "private_subnet_B"
            },
            "vpc_id": "vpc-05101c350f1a8ac93"
          },
          "dependencies": [
            "aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnetA",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:128364418855:subnet/subnet-0a9d63ca67a6b6d73",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a9d63ca67a6b6d73",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "128364418855",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet_A"
            },
            "tags_all": {
              "Name": "public_subnet_A"
            },
            "vpc_id": "vpc-05101c350f1a8ac93"
          },
          "dependencies": [
            "aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnetB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:128364418855:subnet/subnet-00e102772f8f18eeb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00e102772f8f18eeb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "128364418855",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet_B"
            },
            "tags_all": {
              "Name": "public_subnet_B"
            },
            "vpc_id": "vpc-05101c350f1a8ac93"
          },
          "dependencies": [
            "aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "new_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:128364418855:vpc/vpc-05101c350f1a8ac93",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-063175a0a99c93166",
            "default_route_table_id": "rtb-08b7ba2b3ac2ae18a",
            "default_security_group_id": "sg-035ab3ed0fc41f70b",
            "dhcp_options_id": "dopt-05ddb65fcbff2f13b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-05101c350f1a8ac93",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08b7ba2b3ac2ae18a",
            "owner_id": "128364418855",
            "tags": {
              "Name": "New_vpc_Obligatorio"
            },
            "tags_all": {
              "Name": "New_vpc_Obligatorio"
            }
          }
        }
      ]
    }
  ]
}